rafting/css/style.css
* {
    margin:0;
    padding:0;
}
#logo {
    padding:1rem 0 0 1.5rem;
}
body {
    background-color:rgb(92, 117, 94);
    font-size: 25px;
    color:rgba(169, 125, 93, 1);

}

header {
    display:grid;
    grid-template-columns: 300px 1fr;
}

.grid > p {
    font-size: 25px;
}
.openinglinks a {
    display: block;
    padding: 1rem;
    text-decoration: none;
    font-weight: 700;
}
ul {
    list-style: none;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    padding:50px;

}
.openinglinks {
    text-align: center;
    color:rgba(85, 172, 172, 1);
    padding: .75rem;

}

.openinglinks a:hover {
    color:rgba(85, 172, 172, 1);
}

.grid img {
    box-shadow:0 0 1rem rgb(65, 64, 64);
}

.page {
    background-color: rgb(235, 230, 195);
    font-family: 'Bitter', serif, sans-serif;
    max-width: 960px;
    margin:1rem auto;
}

.heropicture {
    position:relative;
}

.heropicture > h2 {
    text-align: center;
    font-size: 30px;
}

.heropicture > picture > img {
    width:98%;
    margin: 10px;

}
section {
    text-align: center;
    font-size: 30px;
    font-style: italic;
    font-family: 'Bitter', serif, sans-serif;
    padding: 0px 8px 8px 8px;
    border: solid 5px;
    background:radial-gradient(rgb(138, 167, 140), rgb(235, 230, 195));
    color:rgba(85, 172, 172, 1);
    position:absolute;
    top:112px;
    left:154px;
    box-shadow: 0 0 15px rgba(85, 172, 172, 1);

}

section button:hover {
    color:rgba(85, 172, 172, 1);

}
button {
    font-size: 28px;
    font-family: 'Bitter', serif, sans-serif;
    border-radius: 10px;
    border-color:rgba(85, 172, 172, 1);
    padding: 4px;
    margin-bottom: 4px;

    
}
h1 {
    margin-top: 5px;
    margin-bottom:5px;
    font-size: 40px;
    text-align: center;
    color:rgb(169, 125, 93);
}
p {
    margin: .25rem;
    padding: 8px;
    font-size:25px;
    
    
}
 p, a {
    color:rgb(169, 125, 93);

 }
 .grid {
     
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
     
 }

.grid a {
     grid-column: 1/2;
     grid-row:1/2;
     margin-top: 10px;
    font-size: 40px;
    text-decoration: none;
    text-align: center;
     
 }

 .tripparagraph{
    grid-column: 1/2;
    grid-row:1/2;
    text-align: justify;
    align-items: center;
    margin-top: 60px;
}


.tripinfopic {
        grid-column: 2/3;
        grid-row: 1/2;
        

     }

.photoheading {
    grid-column: 2/3;
    grid-row: 2/3;
    text-align: center;

}

.photoparagraph {
    grid-column: 2/3;
    grid-row: 2/3;
    text-align: justify; 
    margin-top: 60px;
   

}

.photopic {
    grid-column: 1/2;
    grid-row: 2/3;
    align-items: center;
    margin-left: 20px;
    
    
}

.otheractivitiesheading {
    grid-column: 1/4;
    grid-row: 3/4;
    text-align: center;

}

.otheractivitiesparagraph {
    grid-column: 1/4;
    grid-row: 3/4;
    text-align: justify;
    margin-top: 60px;
   

}

 footer {
     display: grid;
     grid-template-columns: .95fr 40px 40px 0px;
    font-family: 'Bitter', serif, sans-serif;
    padding: 10px;
    border: solid 1px;
    background:radial-gradient(rgb(138, 167, 140), rgb(235, 230, 195));
    color:rgba(85, 172, 172, 1); 
    align-items: center;

 }

 footer > p {
    font-size: 18px;
 }

 .tripheadandpicgrid {
     display: grid;
     grid-template-columns:250px 250px 250px;
     grid-template-rows: 100px;
     column-gap: 60px;
     margin: 30px 10px 10px 10px;
    justify-content: center;
    align-items: center;
    position: relative;
 }

 .onedaypic {
    grid-column: 1/2;
    grid-row: 1/2;
    position: absolute;
    bottom:30px;
    left:85px;

}

.onedayhead{
    grid-column: 1/2;
    grid-row: 1/2;
    font-size: 30px;
    position: absolute;
    left:60px;
}

.twodayspic {
    grid-column: 2/3;
    grid-row: 1/2;
    text-align: center;
    position: absolute;
    bottom:45px;
    left:85px;

}

.twodayshead {
    grid-column: 2/3;
    grid-row: 1/2;
    font-size: 30px;
    text-align: center;
    margin: 30px;

}

.threedayspic {
    grid-column: 3/4;
    grid-row: 1/2;
    text-align: center;
    position: absolute;
    bottom:60px;
    left:90px;


}

.threedayshead {
    grid-column: 3/4;
    grid-row: 1/2;
    font-size: 30px;
    text-align: center;
    margin: 30px;
}


.tripparagraphgrid {
    display: grid;
    grid-template-columns: 250px 250px 250px;
    grid-template-rows: 100px 100px 100px;
    column-gap: 60px;
    margin: 10px;
    justify-content: center;

}

.onedayparagraph {
    grid-column: 1/2;
    grid-row: 1/4;
    text-align: justify;
}

.onedaybutton:hover {
    grid-column: 1/2;
    grid-row: 4/5;
    text-align: center;
    color:rgba(85, 172, 172, 1);
   
}

.twodaysparagraph {
    grid-column: 2/3;
    grid-row: 1/4;
    text-align: justify;
}

.twodaysbutton:hover {
    grid-column: 2/3;
    grid-row: 4/5;
    text-align: center;
    color:rgba(85, 172, 172, 1);
}

.threedaysparagraph {
        grid-column: 3/4;
        grid-row: 1/4;
        text-align: justify;
}

.threedaysbutton:hover {
        grid-column: 3/4;
        grid-row: 4/5;
        text-align: center;
        color:rgba(85, 172, 172, 1);
}

.meetourstaffgrid {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(3, .75fr);
        grid-gap: 20px;
        justify-items: center;
         margin: 20px;
}
.selfpic {
    grid-column: 2/3;
    grid-row: 1/2;
    margin-top: 20px;
    box-shadow: 0 0 1rem rgb(65, 64, 64);
}
.self {
    grid-column: 1/2;
    grid-row: 1/2;
    text-align: center;
    margin-top: 20px;
    text-decoration: underline;
    
}

.tommyparagraph {
    grid-column: 1/2;
    grid-row: 1/2;
    text-align: justify;
    margin-top: 70px;

}

.danielpic {
    grid-column: 1/2;
    grid-row: 2/3;
    margin-top: 20px;
    box-shadow: 0 0 1rem rgb(65, 64, 64);
}

.daniel {
    grid-column: 2/3;
    grid-row: 2/3;
    text-align: center;
    margin-top: 20px;
    text-decoration: underline;

}

.danielparagraph {
    grid-column: 2/3;
    grid-row: 2/3;
    text-align: justify;
    margin-top: 70px;

}

.tylerpic {
    grid-column: 2/3;
    grid-row: 3/4;
    margin-top: 20px;
    box-shadow: 0 0 1rem rgb(65, 64, 64);
}
.tyler {
    grid-column: 1/2;
    grid-row: 3/4;
    text-align: center;
    margin-top: 20px;
    text-decoration: underline;
    
}

.tylerparagraph {
    grid-column: 1/2;
    grid-row: 3/4;
    text-align: justify;
    margin-top: 70px;

}

